# Polyglot

./: .gitignore  README.md  pyproject.toml
config/: settings.toml  shows.toml
config/prompts/: fr.txt
config/prompts/audio/: chess.txt  finance.txt  general.txt  history.txt  news.txt  poker.txt  sports.txt
docs/setup/: setup-notes.md
docs/superpowers/plans/: 2026-06-14-polyglot-phase0-phase1.md
docs/superpowers/specs/: 2026-06-14-polyglot-media-system-design.md
scripts/: compare_translation.py  export_cookies.sh  gemini_audio_probe.py  install_schedule.sh  populate.py  run_watch.sh  setup_jellyfin.sh  uninstall_schedule.sh  validate_watch.py  voice_pitch_test.py
src/polyglot/: app.py  assemble.py  cli.py  config.py  diarize.py  download.py  feeds.py  gemini_audio.py  jobs.py  library.py  orpheus_tts.py  pipeline.py  publish_video.py  retention.py  segments.py  separate.py  state.py  storage.py  subtitles.py  transcribe.py  translate.py  tts.py  watch.py
tests/: test_assemble.py  test_cli_run.py  test_cli_show.py  test_cli_watch.py  test_config.py  test_diarize.py  test_download.py  test_feeds.py  test_library.py  test_orpheus.py  test_pipeline.py  test_retention.py  test_segments.py  test_separate.py  test_state.py  test_subtitles.py  test_transcribe.py  test_translate.py  test_tts.py  test_watch.py
tests/fixtures/: feed.xml
