[project]
name = "polyglot"
version = "0.1.0"
description = "Local-first podcast/video dubbing pipeline (EN -> target language)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "mlx",
    "mlx-lm",
    "mlx-whisper",
    "coqui-tts",
    "feedparser",
    "requests",
    "soundfile",
    "numpy",
    "yt-dlp",
    "feedgen",
    "boto3",
]

[project.scripts]
polyglot = "polyglot.cli:main"

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polyglot"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
