[project]
name = "polyglot"
version = "0.1.0"
description = "Local-first podcast/video dubbing pipeline (EN -> target language)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "mlx",
    "mlx-lm",
    "mlx-whisper",
    "coqui-tts[codec]",
    "torchaudio",
    # coqui-tts 0.27.5 imports isin_mps_friendly from transformers.pytorch_utils,
    # which was removed in transformers 5.x. Pin to the 4.x line.
    "transformers>=4.57,<5",
    "feedparser",
    "requests",
    "soundfile",
    "numpy",
    "yt-dlp[default]",
    "speechbrain>=1.1.0",
    "scikit-learn>=1.9.0",
    "demucs-infer>=4.1.3",
    "llama-cpp-python>=0.3.29",
    "snac>=1.2.1",
    "anthropic>=0.109.1",
    "streamlit>=1.58.0",
]

[project.scripts]
polyglot = "polyglot.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polyglot"]
